src/objects/Quote_Opportunity_Rollups__mdt.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <inlineHelpText>Represents  criteria,Action and Logic</inlineHelpText>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Criteria</fullName>
                    <default>true</default>
                    <label>Criteria</label>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <inlineHelpText>to indicate Index of condition for logic</inlineHelpText>
        <label>Index</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Operator for fields criteria</description>
        <inlineHelpText>Operator for fields criteria</inlineHelpText>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>Ischanged</fullName>
                    <label>Is changed</label>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>startsWith</fullName>
                </value>
                <value>
                    <fullName>endsWidth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPN__c</fullName>
        <inlineHelpText>Previous process name for separating from other processes</inlineHelpText>
        <label>Previous Process Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote - Push Opp Rollups</fullName>
                    <default>true</default>
                    <label>Quote - Push Opp Rollups</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>To refer field on Current object</description>
        <inlineHelpText>To refer field on Current object</inlineHelpText>
        <label>Target Field</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <inlineHelpText>Related object</inlineHelpText>
        <label>Target Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Quote_Opportunity_Roll_ups</relationshipLabel>
        <relationshipName>Quote_Opportunity_Roll_ups</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <inlineHelpText>To represent  value to check or assign</inlineHelpText>
        <label>Target Value</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The Type  of the Opportunity</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote -Opportunity Roll ups</label>
    <pluralLabel>Quote -Opportunity Roll ups</pluralLabel>
</CustomObject>